k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestration-app
  namespace: orchestration
  labels:
    app: orchestration-app
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: orchestration-app
